<resources>
    <string name="app_name">Kwanso Assignment</string>
    <string name="task">ASSIGNMENT TASK</string>
    <string name="todo">to</string>
    <string name="no_item_found_in_grocery">No item found in Grocery</string>
    <string name="empty_list">Empty List!</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_100">100 PKR/-</string>
    <string name="price">Price</string>
    <string name="item_name">Item Name</string>
    <string name="add_grocery">Add Grocery</string>
    <string name="status">status</string>
    <string name="grocery_list">Grocery List</string>
    <string name="all_list">All List</string>
    <string name="create_list">Create List</string>
</resources>