<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:padding="@dimen/_4sdp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="@dimen/_5sdp"
        app:cardMaxElevation="@dimen/_5sdp"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="@dimen/_5sdp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_16ssp" />
                <TextView
                    android:id="@+id/item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"

                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <ImageView
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/image"
                android:layout_alignParentEnd="true"
                android:src="@drawable/arrow"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/todo" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>